modules/XForms/xforms-1.2.5pre1/lib/include/forms.h


typedef int FL_Coord;
typedef unsigned long FL_COLOR;
typedef struct FL_FORM_    FL_FORM;
typedef struct FL_OBJECT_  FL_OBJECT;
typedef struct FL_pixmap_  FL_pixmap;
struct FL_OBJECT_ {
    FL_FORM        * form;           
    void           * u_vdata;        
    char           * u_cdata;        
    long             u_ldata;        
    int              objclass;       
    int              type;           
    int              boxtype;        
    FL_Coord         x,              
                     y,
                     w,
                     h;
    double           fl1,            
                     fr1,            
                     ft1,            
                     fb1,            
                     fl2,
                     fr2,
                     ft2,
                     fb2;
    FL_Coord         bw;
    FL_COLOR         col1,           
                     col2;
    char           * label;          
    FL_COLOR         lcol;           
    int              align;
    int              lsize,          
                     lstyle;
    long           * shortcut;
    int              ( * handle )( FL_OBJECT *,
                                   int,
                                   FL_Coord,
                                   FL_Coord,
                                   int,
                                   void * );
    void             ( * object_callback )( FL_OBJECT *,
                                            long );
    long             argument;
    void           * spec;           
    int              ( * prehandle )( FL_OBJECT *,
                                      int,
                                      FL_Coord,
                                      FL_Coord,
                                      int,
                                      void * );
    int              ( * posthandle )( FL_OBJECT *,
                                       int,
                                       FL_Coord,
                                       FL_Coord,
                                       int,
                                       void * );
    void             ( * set_return )( FL_OBJECT *,
                                       unsigned int );
    unsigned int     resize;         
    unsigned int     nwgravity;      
    unsigned int     segravity;      
    FL_OBJECT      * prev;           
    FL_OBJECT      * next;           
    FL_OBJECT      * parent;
    FL_OBJECT      * child;
    FL_OBJECT      * nc;             
    FL_pixmap      * flpixmap;       
    int              use_pixmap;     
    int              returned;       
    unsigned int     how_return;     
    int              double_buffer;  
    int              pushed;
    int              focus;
    int              belowmouse;
    int              active;         
    int              input;
    int              wantkey;
    int              radio;
    int              automatic;
    int              redraw;
    int              visible;
    int              is_under;       
    int              clip;
    unsigned long    click_timeout;
    void           * c_vdata;        
    char           * c_cdata;        
    long             c_ldata;        
    FL_COLOR         dbl_background; 
    char           * tooltip;
    int              tipID;
    int              group_id;
    int              want_motion;
    int              want_update;
};
typedef void ( * FL_FORMCALLBACKPTR )( FL_OBJECT *,
                                       void * );
typedef void ( * FL_CALLBACKPTR )( FL_OBJECT *,
                                   long );
typedef int ( * FL_RAW_CALLBACK )( FL_FORM *,
                                   void * );
typedef int ( * FL_FORM_ATCLOSE )( FL_FORM *,
                                   void * );
typedef void ( * FL_FORM_ATDEACTIVATE )( FL_FORM *,
                                         void * );
typedef void ( * FL_FORM_ATACTIVATE )( FL_FORM *,
                                       void * );
typedef int ( * FL_HANDLEPTR )( FL_OBJECT *,
                                int,
                                FL_Coord,
                                FL_Coord,
                                int,
                                void * );
typedef void ( * FL_ERROR_FUNC )( const char *,
                                  const char *,
                                  ... );
FL_EXPORT FL_OBJECT *FL_EVENT;
enum {
  FL_BEING_HIDDEN = -1,
  FL_HIDDEN       = 0,
  FL_INVISIBLE    = FL_HIDDEN,
  FL_VISIBLE      = 1
};
struct FL_FORM_ {
    void                 * fdui;          
    void                 * u_vdata;       
    char                 * u_cdata;       
    long                   u_ldata;       
    char *                 label;         
    Window                 window;        
    FL_Coord               x,             
                           y,
                           w,
                           h;
    int                    handle_dec_x,
                           handle_dec_y;
    FL_Coord               hotx,          
                           hoty;
    double                 w_hr,          
                           h_hr;          
    FL_OBJECT            * first;
    FL_OBJECT            * last;
    FL_OBJECT            * focusobj;
    FL_FORMCALLBACKPTR     form_callback;
    FL_FORM_ATACTIVATE     activate_callback;
    FL_FORM_ATDEACTIVATE   deactivate_callback;
    void                 * form_cb_data;
    void                 * activate_data;
    void                 * deactivate_data;
    FL_RAW_CALLBACK        key_callback;
    FL_RAW_CALLBACK        push_callback;
    FL_RAW_CALLBACK        crossing_callback;
    FL_RAW_CALLBACK        motion_callback;
    FL_RAW_CALLBACK        all_callback;
    unsigned long          compress_mask;
    unsigned long          evmask;
    FL_FORM_ATCLOSE        close_callback;
    void                 * close_data;
    FL_pixmap            * flpixmap;         
    Pixmap                 icon_pixmap;
    Pixmap                 icon_mask;
    int                    deactivated;      
    int                    use_pixmap;       
    int                    frozen;           
    int                    visible;          
    int                    wm_border;        
    unsigned int           prop;             
    int                    num_auto_objects;
    int                    needs_full_redraw;
    int                    sort_of_modal;    
    FL_FORM              * parent;
    FL_FORM              * child;
    FL_OBJECT            * parent_obj;
    int                    attached;         
    void                   ( * pre_attach )( FL_FORM * );
    void                 * attach_data;
    int                    in_redraw;
};
typedef struct {
    FL_FORM * form;
    void    * vdata;
    char    * cdata;
    long      ldata;
} FD_Any;
enum {
    FL_READ   = 1,
    FL_WRITE  = 2,
    FL_EXCEPT = 4
};
typedef void ( * FL_IO_CALLBACK )( int,
                                   void * );
FL_EXPORT void fl_add_io_callback( int              fd,
                                   unsigned int     mask,
                                   FL_IO_CALLBACK   callback,
                                   void           * data );
FL_EXPORT void fl_remove_io_callback( int            fd,
                                      unsigned int   mask,
                                      FL_IO_CALLBACK cb );
typedef void ( * FL_SIGNAL_HANDLER )( int,
                                      void * );
FL_EXPORT void fl_add_signal_callback( int                 s,
                                       FL_SIGNAL_HANDLER   cb,
                                       void              * data );
FL_EXPORT void fl_remove_signal_callback( int s );
FL_EXPORT void fl_signal_caught( int s );
FL_EXPORT void fl_app_signal_direct( int y );
enum {
	FL_INPUT_END_EVENT_CLASSIC = 0,
	FL_INPUT_END_EVENT_ALWAYS  = 1
};
FL_EXPORT int fl_input_end_return_handling( int type );
typedef void (* FL_TIMEOUT_CALLBACK )( int, void * );
FL_EXPORT int fl_add_timeout( long                  msec,
                              FL_TIMEOUT_CALLBACK   callback,
                              void                * data );
FL_EXPORT void fl_remove_timeout( int id );
FL_EXPORT int fl_library_version( int * ver,
                                  int * rev );
FL_EXPORT long fl_library_full_version( int         * version,
										int         * revision,
										int         * fix_level,
										const char ** extra );
FL_EXPORT FL_FORM * fl_bgn_form( int      type,
                                 FL_Coord w,
                                 FL_Coord h );
FL_EXPORT void fl_end_form( void );
FL_EXPORT FL_OBJECT * fl_do_forms( void );
FL_EXPORT FL_OBJECT * fl_check_forms( void );
FL_EXPORT FL_OBJECT * fl_do_only_forms( void );
FL_EXPORT FL_OBJECT * fl_check_only_forms( void );
FL_EXPORT void fl_freeze_form( FL_FORM * form );
FL_EXPORT void fl_set_focus_object( FL_FORM   * form,
                                    FL_OBJECT * obj );
FL_EXPORT FL_OBJECT *fl_get_focus_object( FL_FORM * form );
FL_EXPORT void fl_reset_focus_object( FL_OBJECT * ob );
FL_EXPORT FL_FORM_ATCLOSE fl_set_form_atclose( FL_FORM         * form,
                                               FL_FORM_ATCLOSE   fmclose,
                                               void            * data );
FL_EXPORT FL_FORM_ATCLOSE fl_set_atclose( FL_FORM_ATCLOSE   fmclose,
                                          void            * data );
FL_EXPORT FL_FORM_ATACTIVATE fl_set_form_atactivate( FL_FORM            * form,
													 FL_FORM_ATACTIVATE   cb,
													 void               * data );
FL_EXPORT FL_FORM_ATDEACTIVATE fl_set_form_atdeactivate( FL_FORM              * form,
														 FL_FORM_ATDEACTIVATE   cb,
														 void                 * data );
FL_EXPORT void fl_unfreeze_form( FL_FORM * form );
FL_EXPORT int fl_form_is_activated( FL_FORM * form );
FL_EXPORT void fl_deactivate_form( FL_FORM * form );
FL_EXPORT void fl_activate_form( FL_FORM * form );
FL_EXPORT void fl_deactivate_all_forms( void );
FL_EXPORT void fl_activate_all_forms( void );
FL_EXPORT void fl_freeze_all_forms( void );
FL_EXPORT void fl_unfreeze_all_forms( void );
FL_EXPORT void fl_scale_form( FL_FORM * form,
                              double    xsc,
                              double    ysc );
FL_EXPORT void fl_set_form_position( FL_FORM  * form,
                                     FL_Coord   x,
                                     FL_Coord   y );
FL_EXPORT void fl_set_form_title( FL_FORM    * form,
                                  const char * name );
FL_EXPORT void fl_set_form_title_f( FL_FORM *    form,
									const char * fmt,
									... );
FL_EXPORT void fl_set_app_mainform( FL_FORM * form );
FL_EXPORT FL_FORM * fl_get_app_mainform( void );
FL_EXPORT void fl_set_app_nomainform( int flag );
FL_EXPORT void fl_set_form_callback( FL_FORM            * form,
                                     FL_FORMCALLBACKPTR   callback,
                                     void               * d );
FL_EXPORT void fl_set_form_size( FL_FORM  * form,
                                 FL_Coord   w,
                                 FL_Coord   h );
FL_EXPORT void fl_set_form_background_color( FL_FORM * form,
											 FL_COLOR  color );
FL_EXPORT FL_COLOR fl_get_form_background_color( FL_FORM * form );
FL_EXPORT void fl_for_all_objects( FL_FORM * form,
                                   int       ( * cb )( FL_OBJECT *, void * ),
                                   void    * v );
FL_EXPORT int fl_enumerate_fonts( void ( * output )( const char * s ),
                                  int  shortform );
FL_EXPORT void ( * fl_free )( void * );
struct FL_pixmap_ {
    Pixmap         pixmap;
    Window         win;
    Visual       * visual;
    FL_Coord       x,
                   y,
                   w,
                   h;
    int            depth;
    FL_COLOR       dbl_background;
    FL_COLOR       pixel;
};
FL_EXPORT void fl_add_fselector_appbutton( const char *,
                                           void ( * )( void * ),
                                           void * );