modules/XForms/generated.jai


FL_OBJECT_ :: struct {
    form:            *FL_FORM; /* the form this object belongs to */
    u_vdata:         *void; /* anything the user likes */
    u_cdata:         *u8; /* anything the user likes */
    u_ldata:         s64; /* anything the user likes */

    objclass:        s32; /* class of object, button, slider etc */
    type:            s32; /* type within the class */
    boxtype:         s32; /* what kind of box type */
    x:               FL_Coord; /* current obj. location and size */
    y:               FL_Coord;
    w:               FL_Coord;
    h:               FL_Coord;
    fl1:             float64; /* distances of upper left hand (1) and */
    fr1:             float64; /* lower right hand corner (2) to left, */
    ft1:             float64; /* right, top and bottom of enclosing   */
    fb1:             float64; /* form */
    fl2:             float64;
    fr2:             float64;
    ft2:             float64;
    fb2:             float64;
    bw:              FL_Coord;
    col1:            FL_COLOR; /* colors of obj */
    col2:            FL_COLOR;
    label:           *u8; /* object label */
    lcol:            FL_COLOR; /* label color */
    align:           s32;
    lsize:           s32; /* label size and style */
    lstyle:          s32;
    shortcut:        *s64;
    handle:          #type (unknown0: *FL_OBJECT, unknown1: s32, unknown2: FL_Coord, unknown3: FL_Coord, unknown4: s32, unknown5: *void) -> s32 #c_call;

    object_callback: #type (unknown0: *FL_OBJECT, unknown1: s64) -> void #c_call;

    argument:        s64;
    spec:            *void; /* instantiation */

    prehandle:       #type (unknown0: *FL_OBJECT, unknown1: s32, unknown2: FL_Coord, unknown3: FL_Coord, unknown4: s32, unknown5: *void) -> s32 #c_call;

    posthandle:      #type (unknown0: *FL_OBJECT, unknown1: s32, unknown2: FL_Coord, unknown3: FL_Coord, unknown4: s32, unknown5: *void) -> s32 #c_call;

    set_return:      #type (unknown0: *FL_OBJECT, unknown1: u32) -> void #c_call;

    resize:          u32; /* what to do if WM resizes the FORM     */
    nwgravity:       u32; /* how to re-position top-left corner    */
    segravity:       u32; /* how to re-position lower-right corner */

    prev:            *FL_OBJECT; /* prev. obj in form */
    next:            *FL_OBJECT; /* next. obj in form */

    parent:          *FL_OBJECT;
    child:           *FL_OBJECT;
    nc:              *FL_OBJECT; /* next child */

    flpixmap:        *FL_pixmap; /* pixmap double buffering stateinfo */
    use_pixmap:      s32; /* true to use pixmap double buffering*/

    returned:        s32; /* what last interaction returned */
    how_return:      u32; /* under which conditions to return */
    double_buffer:   s32; /* only used by mesa/gl canvas */
    pushed:          s32;
    focus:           s32;
    belowmouse:      s32;
    active:          s32; /* if object accepts events */
    input:           s32;
    wantkey:         s32;
    radio:           s32;
    automatic:       s32;
    redraw:          s32;
    visible:         s32;
    is_under:        s32; /* if (partially) hidden by other object */
    clip:            s32;
    click_timeout:   u64;
    c_vdata:         *void; /* for class use */
    c_cdata:         *u8; /* for class use */
    c_ldata:         s64; /* for class use */
    dbl_background:  FL_COLOR; /* double buffer background */
    tooltip:         *u8;
    tipID:           s32;
    group_id:        s32;
    want_motion:     s32;
    want_update:     s32;
}

/* Callback function for an entire form */
FL_FORMCALLBACKPTR :: #type (unknown0: *FL_OBJECT, unknown1: *void) -> void #c_call;

/* Object callback function      */
FL_CALLBACKPTR :: #type (unknown0: *FL_OBJECT, unknown1: s64) -> void #c_call;

/* Preemptive callback function  */
FL_RAW_CALLBACK :: #type (unknown0: *FL_FORM, unknown1: *void) -> s32 #c_call;

/* At close (WM menu delete/close etc.) function */
FL_FORM_ATCLOSE :: #type (unknown0: *FL_FORM, unknown1: *void) -> s32 #c_call;

/* Deactivate/activate callback */
FL_FORM_ATDEACTIVATE :: #type (unknown0: *FL_FORM, unknown1: *void) -> void #c_call;

FL_FORM_ATACTIVATE :: #type (unknown0: *FL_FORM, unknown1: *void) -> void #c_call;

FL_HANDLEPTR :: #type (unknown0: *FL_OBJECT, unknown1: s32, unknown2: FL_Coord, unknown3: FL_Coord, unknown4: s32, unknown5: *void) -> s32 #c_call;

/* Error callback */
FL_ERROR_FUNC :: #type (unknown0: *u8, unknown1: *u8, __args: ..Any) -> void #c_call;

FL_EVENT: *FL_OBJECT #elsewhere libforms;

/* Form visibility state: form->visible */
FL_3 :: enum s32 {
    BEING_HIDDEN :: -1;
    HIDDEN       :: 0;
    INVISIBLE    :: 0;
    VISIBLE      :: 1;

    FL_BEING_HIDDEN :: BEING_HIDDEN;
    FL_HIDDEN       :: HIDDEN;
    FL_INVISIBLE    :: INVISIBLE;
    FL_VISIBLE      :: VISIBLE;
}

FL_FORM_ :: struct {
    fdui:                *void; /* for fdesign */
    u_vdata:             *void; /* for application */
    u_cdata:             *u8; /* for application */
    u_ldata:             s64; /* for application */

    label:               *u8; /* window title */
    window:              Window; /* X resource ID for window */
    x:                   FL_Coord; /* current geometry info */
    y:                   FL_Coord;
    w:                   FL_Coord;
    h:                   FL_Coord;
    handle_dec_x:        s32;
    handle_dec_y:        s32;
    hotx:                FL_Coord; /* hot-spot of the form */
    hoty:                FL_Coord;
    w_hr:                float64; /* high resolution width and height */
    h_hr:                float64; /* (needed for precise scaling) */

    first:               *FL_OBJECT;
    last:                *FL_OBJECT;
    focusobj:            *FL_OBJECT;

    form_callback:       FL_FORMCALLBACKPTR;
    activate_callback:   FL_FORM_ATACTIVATE;
    deactivate_callback: FL_FORM_ATDEACTIVATE;
    form_cb_data:        *void;
    activate_data:       *void;
    deactivate_data:     *void;

    key_callback:        FL_RAW_CALLBACK;
    push_callback:       FL_RAW_CALLBACK;
    crossing_callback:   FL_RAW_CALLBACK;
    motion_callback:     FL_RAW_CALLBACK;
    all_callback:        FL_RAW_CALLBACK;

    compress_mask:       u64;
    evmask:              u64;

    /* WM_DELETE_WINDOW message handler */
    close_callback:      FL_FORM_ATCLOSE;
    close_data:          *void;

    flpixmap:            *FL_pixmap; /* back buffer */

    icon_pixmap:         Pixmap;
    icon_mask:           Pixmap;

    deactivated:         s32; /* non-zero if deactivated */
    use_pixmap:          s32; /* true if dbl buffering */
    frozen:              s32; /* true if sync change */
    visible:             s32; /* true if mapped */
    wm_border:           s32; /* window manager info */
    prop:                u32; /* other attributes */
    num_auto_objects:    s32;
    needs_full_redraw:   s32;
    sort_of_modal:       s32; /* internal use */
    parent:              *FL_FORM;
    child:               *FL_FORM;
    parent_obj:          *FL_OBJECT;
    attached:            s32; /* not independent anymore */
    pre_attach:          #type (unknown0: *FL_FORM) -> void #c_call;
    attach_data:         *void;
    in_redraw:           s32;
}

/* All FD_xxx structure emitted by fdesign contains at least the
* following */
FD_Any :: struct {
    form:  *FL_FORM;
    vdata: *void;
    cdata: *u8;
    ldata: s64;
}

/* Async IO stuff */
FL_4 :: enum u32 {
    READ   :: 1;
    WRITE  :: 2;
    EXCEPT :: 4;

    FL_READ   :: READ;
    FL_WRITE  :: WRITE;
    FL_EXCEPT :: EXCEPT;
}

/* IO other than XEvent Q */
FL_IO_CALLBACK :: #type (unknown0: s32, unknown1: *void) -> void #c_call;

fl_add_io_callback :: (fd: s32, mask: u32, callback: FL_IO_CALLBACK, data: *void) -> void #foreign libforms;

fl_remove_io_callback :: (fd: s32, mask: u32, cb: FL_IO_CALLBACK) -> void #foreign libforms;

/* signals */
FL_SIGNAL_HANDLER :: #type (unknown0: s32, unknown1: *void) -> void #c_call;

fl_add_signal_callback :: (s: s32, cb: FL_SIGNAL_HANDLER, data: *void) -> void #foreign libforms;

fl_remove_signal_callback :: (s: s32) -> void #foreign libforms;

fl_signal_caught :: (s: s32) -> void #foreign libforms;

fl_app_signal_direct :: (y: s32) -> void #foreign libforms;

FL_INPUT_END_EVENT :: enum u32 {
    CLASSIC :: 0;
    ALWAYS  :: 1;

    FL_INPUT_END_EVENT_CLASSIC :: CLASSIC;
    FL_INPUT_END_EVENT_ALWAYS  :: ALWAYS;
}

fl_input_end_return_handling :: (type: s32) -> s32 #foreign libforms;

/* Timeouts */
FL_TIMEOUT_CALLBACK :: #type (unknown0: s32, unknown1: *void) -> void #c_call;

fl_add_timeout :: (msec: s64, callback: FL_TIMEOUT_CALLBACK, data: *void) -> s32 #foreign libforms;

fl_remove_timeout :: (id: s32) -> void #foreign libforms;

/* Basic public routine prototypes */
fl_library_version :: (ver: *s32, rev: *s32) -> s32 #foreign libforms;

fl_library_full_version :: (version: *s32, revision: *s32, fix_level: *s32, extra: **u8) -> s64 #foreign libforms;

/** Generic routines that deal with FORMS **/
fl_bgn_form :: (type: s32, w: FL_Coord, h: FL_Coord) -> *FL_FORM #foreign libforms;

fl_end_form :: () -> void #foreign libforms;

fl_do_forms :: () -> *FL_OBJECT #foreign libforms;

fl_check_forms :: () -> *FL_OBJECT #foreign libforms;

fl_do_only_forms :: () -> *FL_OBJECT #foreign libforms;

fl_check_only_forms :: () -> *FL_OBJECT #foreign libforms;

fl_freeze_form :: (form: *FL_FORM) -> void #foreign libforms;

fl_set_focus_object :: (form: *FL_FORM, obj: *FL_OBJECT) -> void #foreign libforms;

fl_get_focus_object :: (form: *FL_FORM) -> *FL_OBJECT #foreign libforms;

fl_reset_focus_object :: (ob: *FL_OBJECT) -> void #foreign libforms;

fl_set_form_atclose :: (form: *FL_FORM, fmclose: FL_FORM_ATCLOSE, data: *void) -> FL_FORM_ATCLOSE #foreign libforms;

fl_set_atclose :: (fmclose: FL_FORM_ATCLOSE, data: *void) -> FL_FORM_ATCLOSE #foreign libforms;

fl_set_form_atactivate :: (form: *FL_FORM, cb: FL_FORM_ATACTIVATE, data: *void) -> FL_FORM_ATACTIVATE #foreign libforms;

fl_set_form_atdeactivate :: (form: *FL_FORM, cb: FL_FORM_ATDEACTIVATE, data: *void) -> FL_FORM_ATDEACTIVATE #foreign libforms;

fl_unfreeze_form :: (form: *FL_FORM) -> void #foreign libforms;

fl_form_is_activated :: (form: *FL_FORM) -> s32 #foreign libforms;

fl_deactivate_form :: (form: *FL_FORM) -> void #foreign libforms;

fl_activate_form :: (form: *FL_FORM) -> void #foreign libforms;

fl_deactivate_all_forms :: () -> void #foreign libforms;

fl_activate_all_forms :: () -> void #foreign libforms;

fl_freeze_all_forms :: () -> void #foreign libforms;

fl_unfreeze_all_forms :: () -> void #foreign libforms;

fl_scale_form :: (form: *FL_FORM, xsc: float64, ysc: float64) -> void #foreign libforms;

fl_set_form_position :: (form: *FL_FORM, x: FL_Coord, y: FL_Coord) -> void #foreign libforms;

fl_set_form_title :: (form: *FL_FORM, name: *u8) -> void #foreign libforms;

fl_set_form_title_f_CFormat :: (form: *FL_FORM, fmt: *u8, __args: ..Any) -> void #foreign libforms "fl_set_form_title_f";
fl_set_form_title_f :: (form: *FL_FORM, fmt: string, __args: ..Any) {
    push_allocator(temp);
    formatted_text_builder: String_Builder;
    print_to_builder(*formatted_text_builder, fmt, ..__args);
    append(*formatted_text_builder, "\0");
    formatted_text := builder_to_string(*formatted_text_builder);
    fl_set_form_title_f_CFormat(form, "%s", formatted_text.data);
} @PrintLike

fl_set_app_mainform :: (form: *FL_FORM) -> void #foreign libforms;

fl_get_app_mainform :: () -> *FL_FORM #foreign libforms;

fl_set_app_nomainform :: (flag: s32) -> void #foreign libforms;

fl_set_form_callback :: (form: *FL_FORM, callback: FL_FORMCALLBACKPTR, d: *void) -> void #foreign libforms;

fl_set_form_size :: (form: *FL_FORM, w: FL_Coord, h: FL_Coord) -> void #foreign libforms;

fl_set_form_background_color :: (form: *FL_FORM, color: FL_COLOR) -> void #foreign libforms;

fl_get_form_background_color :: (form: *FL_FORM) -> FL_COLOR #foreign libforms;
